--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.14.7",
     "@testing-library/jest-dom": "^5.17.0",
@@ -13,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^10.16.2",
     "install": "^0.13.0",
     "react-bootstrap": "^2.8.0",
